# prog_practice

./: .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index1.html  index1m.html  index1m.qmd  index2.html  index2s.html  index2s.qmd  index2s_2025.html  index3s.html  index3s.qmd  lab1.html  lab1.qmd  lab2.html  lab2.qmd  lab3.html  lab3.qmd  lab4.html  lab4.qmd  lab5.html  lab5.qmd  lab6.html  lab6.qmd  lab7.html  lab7.qmd  lab8.html  lab8.qmd  m1_lab1.html  m1_lab1.qmd  m1_lab2.html  m1_lab2.qmd  m1_lab3.html  m1_lab3.qmd  m1_lab4.html  m1_lab4.qmd  (+10 more)
2026/: lab1.html  lab1.qmd  lab10.html  lab10.qmd  lab11.html  lab11.qmd  lab12.html  lab12.qmd  lab13.html  lab13.qmd  lab14.html  lab14.qmd  lab2.html  lab2.qmd  lab3.html  lab3.qmd  lab4.html  lab4.qmd  lab5.html  lab5.qmd  lab6.html  lab6.qmd  lab7.html  lab7.qmd  lab8.html  lab8.qmd  lab9.html  lab9.qmd
2026/.jupyter_cache/: global.db
2026/.jupyter_cache/executed/c8b1c92876815fd2b5e60ac9101a4144/: base.ipynb
nb/: Untitled.html
