[project]
name = "prog-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "openai-whisper>=20250625",
    "pyttsx3>=2.99",
]

[tool.uv.workspace]
members = [
    "_repos/pydantic",
    "_repos/models",
]
